_less/rtl.less
/*Language specific styles that override default*/

/*Styles for HTML tags*/

body{
	font-family:'DroidNaskh', sans-serif;
	direction:rtl;
}
h1,h2{
	font-family:'DroidNaskh', sans-serif;
}
h2,h3{
	text-align:right;
}
ul{
	padding-right:20px;
	padding-left:auto;
	margin-right:0;
}
p{
	line-height:2em;
}

/*Styles for whole website*/

.head{
	direction:ltr;
}
.lang li ul li{
	font-family:Arial, sans-serif;
}
.menusimple li a,
.menusimple li a:active,
.menusimple li a:visited,
.menusimple li a:link{
	font-family:'DroidNaskh', sans-serif;
}
.menusimple li ul{
	right:0;
	left:auto;
}
.menusimple li ul li a,
.menusimple li ul li a:active,
.menusimple li ul li a:visited,
.menusimple li ul li a:link{
	text-align:right;
}
.footer{
	text-align:right;
	padding:20px 40px 20px 0;
}
.footer>div>a{
	margin-right:0;
	margin-left:15px;
}
.titleicon{
	margin-right:auto;
	margin-left:5px;
}
h1 .rssicon{
	margin-left:0;
	margin-right:10px;
	margin-bottom:12px;
}
h2 .rssicon{
	margin-left:0;
	margin-right:10px;
	margin-bottom:18px;
}
.mainbutton a,
.mainbutton a:link,
.mainbutton a:visited,
.mainbutton a:active{
	font-family:'DroidNaskh', sans-serif;
	text-align:right;
	padding:15px 68px 15px 20px;
}
.mainbutton img{
	margin-left:10px;
	margin-right:-52px;
}
.contributors{
	text-align:right;
}
.contributors span{
	direction:ltr;
}
.downloadbox div{
	text-align:right;
}
.previewrow>div{
	margin-right:auto;
	margin-left:15px;
}
.previewrow>div>a{
	line-height:1.2em;
}
.previewrow>div:first-child+div+div,
.previewrow>div:first-child+div+div+div+div+div{
	margin-left:0;
}
.previewrow>div>div>div>span{
	right:auto;
	left:30px;
}
.previewrow>div>div>div>h2{
	text-align:right;
}
.previewrow>div>div>div>h2:first-child+span+p{
	line-height:1.5em;
}
.index a,
.index a:link,
.index a:active,
.index a:visited{
	line-height:2em;
}
.floatimg{
	float:right;
	margin-right:auto;
	margin-left:10px;
}
	
/*Override UbuntuBold by Droid Naskh*/

@font-face{font-family:'DroidNaskh';src:url('/font/droidnaskh-regular.eot');font-weight:normal;font-style:normal;}
@font-face{font-family:'DroidNaskh';src:url('/font/droidnaskh-regular.ttf') format('truetype');font-weight:normal;font-style:normal;}

/*Styles specific to mobiles*/

@media handheld, only screen and (max-device-height: 37em), only screen and (max-device-width: 50em){
	h1{
		text-align:right;
	}
	.summary{
		text-align:right;
	}
	.content{
		position:static;
		padding:15px 10px 20px 10px;
		text-align:right;
	}
}

/* Deprecated styles (should be removed when translations are updated) */

.resourcesold li{
	text-align:right;
}

